te be able to ad alis ti js

--- a/web1/index.html
+++ b/web1/index.html
@@ -21,5 +21,16 @@
     <div class ="box-gap" id="O6"><p></p><input id="I6"><p></p></div>
     <div class ="box-gap" id="O7"><p></p><input id="I7"><p></p></div>
     <div class ="box-gap" id="O8"><p></p><input id="I8"><p></p></div>
+    <div class ="box-gap" id="O9"><p></p>
+        <div id="out">
+                <section id="playersList">
+                    <table>
+                        
+                    </table>
+                </section>
+        </div>
+        <p></p></div>
+
+    
 </body>
 </html>
